--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -13,16 +13,7 @@
 
     <div class="container mt-3">
         <div class="d-flex justify-content-between align-items-center">
-            <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                    Users
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item">User 1</a></li>
-                    <li><a class="dropdown-item">user 2</a></li>
-                    <li><a class="dropdown-item">user 3</a></li>
-                </ul>
-            </div>
+
             <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Add task
@@ -37,21 +28,29 @@
             <table class="table">
                 <thead>
                     <tr>
+                        <th>User ID</th>
                         <th>Taskname</th>
                         <th>Tasktype</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <% tasksList.forEach((task)=> { %>
-                        <tr>
-                            <td>
-                                <%= task.TaskName %>
-                            </td>
-                            <td>
-                                <%= task.TaskType %>
-                            </td>
-                        </tr>
-                        <% }) %>
+                    <% if(tasksList.length> 0) { %>
+                        <% tasksList.forEach((task)=> { %>
+                            <tr>
+                                <td>
+                                    <%= task.UserID %>
+                                </td>
+                                <td>
+                                    <%= task.TaskName %>
+                                </td>
+                                <td>
+                                    <%= task.TaskType %>
+                                </td>
+                            </tr>
+                            <% }) %>
+                                <% } else { %>
+                                    <tr>No Data Found</tr>
+                                    <% } %>
                 </tbody>
             </table>
         </div>
@@ -71,6 +70,15 @@
                         <div class="container mt-3">
 
                             <form action="/add-tasks" method="post">
+                                <div class="dropdown">
+                                    <select class="form-control" name="userId">
+                                        <% usersList.forEach(users=> { %>
+                                            <option value="<%= users.id %>">
+                                                <%= users.name %>
+                                            </option>
+                                            <%})%>
+                                    </select>
+                                </div>
                                 <div class="mb-3 mt-3">
                                     <label for="TaskName">Task Name:</label>
                                     <input type="text" class="form-control" id="TaskName" placeholder="Enter Task Name"
